# crowdspace

./: .gitignore
py_ble/: Readme.md  main_v1.py  pyproject.toml  requirements.txt
py_ble/ble_chat/: central.py  main.py  orchestrator.py  peripheral.py  protocol.py  ui.py
py_ble/ble_mesh/: README.md  __init__.py  cli.py  config.py  requirements.txt
py_ble/ble_mesh/core/: neighbor.py  node.py  packet.py  protocol.py  router.py
py_ble/ble_mesh/features/: __init__.py  base.py  locating.py
py_ble/ble_mesh/transport/: manager.py  peripheral.py
py_ble/ble_mesh/utils/: logger.py
py_ble/ble_mesh_v1/: Readme.md  __init__.py  cli.py  config.py  requirements.txt
py_ble/ble_mesh_v1/core/: __init__.py  neighbor.py  node.py  packet.py  protocol.py  router.py
py_ble/ble_mesh_v1/features/: __init__.py  base.py  group_chat.py  locating.py  messaging.py
py_ble/ble_mesh_v1/transport/: __init__.py  central.py  manager.py  peripheral.py
py_ble/ble_mesh_v1/utils/: __init__.py  crypto.py  logger.py
py_ble/ble_mesh_v2/: README.md
py_ble/ble_mesh_v2/core/: __init__.py
py_ble/ble_mesh_v2/features/: group_chat.py  messaging.py
py_ble/ble_mesh_v2/transport/: __init__.py  central.py
py_ble/ble_mesh_v2/utils/: __init__.py  crypto.py
py_ble/ble_p2p/: Readme.md  __init__.py  cli.py  constants.py  device.py  message.py  node.py  protocol.py  requirements.txt
py_ble/ble_p2p/features/: base.py  device_locator.py  direct_message.py  group_chat.py
py_ble/ble_p2p/network/: peer.py  router.py
py_ble/ble_p2p/storage/: store.py
py_ble/ble_p2p/transport/: central.py  peripheral.py
py_ble/src/: __init__.py  central.py  cli.py  constants.py  main.py  mesh_node.py  orchestrator.py  peripheral.py  protocol.py  ui.py
py_ble/src/core/: ble_manager.py  crypto.py  mesh_router.py  node.py  packet.py
py_ble/src/features/: base.py  (+3 more)
py_ble/src_v2/: addressing.py  constants.py  events.py  protocol.py  pyproject.toml  ui.py
py_ble/src_v3/: __init__.py  cli.py
(+103 files in other folders)
