[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ble-dev"
version = "0.1.0"
description = "BLE concept implementations"
requires-python = ">=3.8"
dependencies = [
    "bleak==3.0.2",
    "bless==0.3.0",
    "dbus-fast==4.0.4",
    "dbus-next==0.2.3",
    "markdown-it-py==4.2.0",
    "mdurl==0.1.2",
    "Pygments==2.20.0",
    "rich==15.0.0",
    "prompt_toolkit==3.0.52",
    "python-dotenv==1.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ble-messenger = "features.ble_chat.main:main"